@@ -1,3 +1,13 @@
+2008-06-30  Simon Hausmann  <hausmann@webkit.org>
+
+        Fix the Qt build.
+
+        Added missing includes and changed getItem array calls to use get()
+        instead.
+
+        * bridge/qt/qt_runtime.cpp:
+        (KJS::Bindings::convertValueToQVariant):
+
 2008-06-29  David Smith  <catfish.man@gmail.com>
 
         Rubberstamped by Sam Weinig.
